--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,6 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.12.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -65,6 +64,16 @@
 			<groupId>io.mikael</groupId>
 			<artifactId>urlbuilder</artifactId>
 			<version>2.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 
 	</dependencies>
